--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,5 +12,5 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  background: #FFF;
+  background: #F8F8F8;
 }
