--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -40,6 +40,7 @@
   font-weight: 700;
   font-size: 38px;
   line-height: 47.5px;
+  color: var(--Font-black)
 }
 
 .wrapperStat {
@@ -54,7 +55,7 @@
   align-items: center;
   padding: 8px 12px 8px 24px;
   gap: 30px;
-  border: 4px solid #FED42B;
+  border: 4px solid var(--Yandex-amber-12);
   border-radius: 24px;
 }
 
@@ -63,8 +64,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
-  letter-spacing: -1%;
-  color: #212121;
+  color: var(--Font-nickname);
 }
 
 .buttons {
@@ -78,17 +78,14 @@
   height: 50px;
   padding: 12px 24px;
   border: none;
-  background: #FFA12A;
+  background: var(--Yandex-amber-14);
   border-radius: 100px;
   font-family: 'Yandex Sans Display', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
-  color: #FFFFFF;
-  /* identical to box height, or 130% */
-  letter-spacing: -0.01em;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  color: var(--Yandex-white-grey-1);
   cursor: pointer;
 }
 
@@ -98,7 +95,7 @@
   padding: 12px 24px;
   border: none;
   gap: 10px;
-  background: #2AAD2E;
+  background: var(--Yandex-green-7);
   border-radius: 100px;
   cursor: pointer;
 }
@@ -109,10 +106,7 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
-  color: #FFFFFF;
-  /* identical to box height, or 130% */
-  letter-spacing: -0.01em;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  color: var(--Yandex-white-grey-1);
 }
 
 .btnActionMenu {
