--- a/frontend/src/pages/OrderCompletedPage/OrderCompletedPage.module.css
+++ b/frontend/src/pages/OrderCompletedPage/OrderCompletedPage.module.css
@@ -19,8 +19,6 @@
   font-weight: 700;
   font-size: 56px;
   line-height: 68px;
-  /* identical to box height, or 121% */
-  font-feature-settings: 'pnum' on, 'lnum' on;
 }
 
 .description {
@@ -30,8 +28,6 @@
   font-weight: 400;
   font-size: 28px;
   line-height: 32px;
-  /* identical to box height, or 114% */
-  font-feature-settings: 'pnum' on, 'lnum' on;
 }
 
 
@@ -43,7 +39,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #FED42B;
+  background: var(--Yandex-amber-12);
   border-radius: 24px;
   text-decoration: none;
   font-family: 'Yandex Sans Display', sans-serif;
@@ -51,10 +47,10 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
-  color: #000;
+  color: var(--Yandex-black);
   transition: background .2s linear;
 }
 
 .link:hover {
-  background: #F5C400;
+  background: var(--Yandex-amber-13);
 }
