--- a/frontend/src/components/ui/Hint/Hint.module.css
+++ b/frontend/src/components/ui/Hint/Hint.module.css
@@ -10,6 +10,15 @@
 
 .hintShadow {
   box-shadow: 0px 1px 3px rgba(38, 41, 43, 0.2), 1px 1px 6px rgba(38, 41, 43, 0.2);
+  cursor: pointer;
+}
+
+.hintRed {
+  background: #FFF0F1;
+}
+
+.hintGreen {
+  background: #2AAD2E;
 }
 
 .imgHint {
