--- a/frontend/src/pages/OrderPage/OrderPage.module.css
+++ b/frontend/src/pages/OrderPage/OrderPage.module.css
@@ -5,7 +5,7 @@
   gap: 12px;
 }
 
-.goods {
+.wrapperGoods {
   padding: 40px 32px 0;
   background: var(--Yandex-white-grey-1);
   border-radius: 12px;
@@ -15,4 +15,12 @@
   padding: 40px;
   background: var(--Yandex-white-grey-1);
   border-radius: 12px;
+}
+
+.goods {
+  padding-left: 154px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
