--- a/frontend/src/components/FooterBack/FooterBack.module.css
+++ b/frontend/src/components/FooterBack/FooterBack.module.css
@@ -6,6 +6,7 @@
   box-shadow: 0px 5px 46px rgba(0, 0, 0, 0.12), 0px 7px 15px rgba(0, 0, 0, 0.12);
   position: fixed;
   bottom: 0;
+  z-index: 3;
 }
 
 .btnFooterBack {
