--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@
 body {
   max-width: 1920px;
   width: 100%;
+  margin: 0 auto;
   position: relative;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
