--- a/frontend/src/components/ui/Hint/Hint.module.css
+++ b/frontend/src/components/ui/Hint/Hint.module.css
@@ -6,11 +6,12 @@
   gap: 10px;
   background: #F3F0E9;
   border-radius: 12px;
+  transition: background .2s linear;
+  cursor: pointer;
 }
 
 .hintShadow {
   box-shadow: 0px 1px 3px rgba(38, 41, 43, 0.2), 1px 1px 6px rgba(38, 41, 43, 0.2);
-  cursor: pointer;
 }
 
 .hintRed {
@@ -19,6 +20,10 @@
 
 .hintGreen {
   background: #2AAD2E;
+}
+
+.hint:hover {
+  background: #DEDEDE;
 }
 
 .imgHint {
