--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  background: var(--Blue-grey-1);
+  background: var(--Yandex-white-grey-1);
   color: var(--Yandex-black);
 }
