--- a/frontend/src/components/ui/AuthorizationForm/AuthorizationForm.module.css
+++ b/frontend/src/components/ui/AuthorizationForm/AuthorizationForm.module.css
@@ -39,3 +39,24 @@
   display: flex;
   gap: 16px;
 }
+
+.load {
+  margin: 12px 0 0 0;
+  font-family: 'Yandex Sans Display';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 50px;
+  text-align: center;
+}
+
+.err {
+  margin: 8px 0;
+  font-family: 'Yandex Sans Display';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 50px;
+  color: #FF0000;
+  text-align: center;
+}
