refactor: MainPage buttons

--- a/frontend/src/components/ui/ButtonForm/ButtonForm.module.css
+++ b/frontend/src/components/ui/ButtonForm/ButtonForm.module.css
@@ -61,3 +61,11 @@
 .btnLogout:hover {
   background: var(--Button-grey-2);
 }
+
+.btnProblem {
+  background: var(--Yandex-grey-3);
+}
+
+.btnProblem:hover {
+  background: var(--Button-grey);
+}
