--- a/frontend/src/pages/OrderPage/OrderPage.module.css
+++ b/frontend/src/pages/OrderPage/OrderPage.module.css
@@ -36,6 +36,14 @@
   gap: 12px;
 }
 
+.liGoods {
+  list-style-type: none;
+  background: #F8F8F8;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
 .title {
   margin: 0;
   text-align: center;
@@ -48,7 +56,9 @@
 }
 
 .btns {
-  margin-top: 32px;
+  margin: 32px 0 0;
+  padding: 0;
+  list-style-type: none;
   display: flex;
   flex-direction: column;
   gap: 18px;
@@ -58,4 +68,9 @@
   display: flex;
   justify-content: space-between;
   gap: 22px;
+}
+
+.li {
+  margin: 0;
+  padding: 0;
 }
