--- a/frontend/src/components/Goods/Goods.module.css
+++ b/frontend/src/components/Goods/Goods.module.css
@@ -1,13 +1,12 @@
 .goods {
   padding: 12px;
   display: flex;
-  justify-content: space-around;
   align-items: center;
   gap: 22px;
 }
 
 .wrapper {
-  max-width: 600px;
+  max-width: 556px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -22,6 +21,10 @@
 .img {
   width: 50px;
   height: 50px;
+  border-radius: 12px;
+  display: block;
+  object-fit: contain;
+  background: #FFF;
   border-radius: 12px;
 }
 
