--- a/frontend/src/pages/TableSelectionPage/TableSelectionPage.module.css
+++ b/frontend/src/pages/TableSelectionPage/TableSelectionPage.module.css
@@ -1,4 +1,7 @@
 .wrapper {
+  min-width: 951px;
+  width: 100%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
