feat added ModalImei

--- a/frontend/src/components/ModalHonest/ModalHonest.module.css
+++ b/frontend/src/components/ModalHonest/ModalHonest.module.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #F8F8F8;
+  background: #F8F54D;
   border-radius: 16px;
 }
 
