--- a/frontend/src/components/ui/ButtonMenu/ButtonMenu.module.css
+++ b/frontend/src/components/ui/ButtonMenu/ButtonMenu.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 43px;
+  gap: 42px;
   transition: background .2s linear;
   cursor: pointer;
 }
@@ -46,9 +46,18 @@
   gap: 12px;
 }
 
+.packageVeryBig {
+
+}
+
 .img {
   width: 73px;
   height: 73px;
+}
+
+.imgSmall {
+  width: 40px;
+  height: 40px;
 }
 
 .description {
@@ -71,10 +80,6 @@
   justify-content: center;
   transition: background .2s linear;
 }
-
-/* .notSelection:hover .countWrapper {
-  background: #FFF;
-} */
 
 .count {
   text-align: center;
