--- a/frontend/src/components/ui/ButtonForm/ButtonForm.module.css
+++ b/frontend/src/components/ui/ButtonForm/ButtonForm.module.css
@@ -14,6 +14,8 @@
   transition: background .2s linear;
 }
 
+/* Размеры на разных экранах */
+
 .btnProportionsAuth {
   width: 356px;
   height: 98px;
@@ -30,6 +32,15 @@
   font-weight: 700;
   font-size: 48px;
   line-height: 60px;
+}
+
+.btnProportionsOrder {
+  max-width: 322px;
+  width: 100%;
+  height: 221px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 26px;
 }
 
 /* Кнопка на экранах Auth */
@@ -87,5 +98,13 @@
 }
 
 .btnCancelOrder:hover {
+  background: var(--Yandex-amber-13);
+}
+
+.btnOrder {
+  background: var(--Yandex-amber-12);
+}
+
+.btnOrder:hover {
   background: var(--Yandex-amber-13);
 }
