--- a/frontend/src/pages/OrderPage/OrderPage.module.css
+++ b/frontend/src/pages/OrderPage/OrderPage.module.css
@@ -27,6 +27,10 @@
   border-bottom: 2px solid #E8E8E8;
 }
 
+.packed {
+  background: #F5FFF6;
+}
+
 .disablePack{
   opacity: .5;
 }
@@ -58,6 +62,13 @@
 
 .choiceGoods {
   background: #EAFFEB;
+}
+
+.invisible {
+  opacity: 0;
+  transition:
+  opacity 0.3s ease-in-out,
+  height 0.3s 0.3s ease-in-out;
 }
 
 .title {
