feat hooks: useInput & useValidation; refactor: Form component

--- a/frontend/src/components/Form/Form.module.css
+++ b/frontend/src/components/Form/Form.module.css
@@ -50,6 +50,11 @@
   text-align: center;
 }
 
+.errWrapper {
+  display: flex;
+  gap: 10px;
+}
+
 .err {
   margin: 8px 0;
   font-family: 'Yandex Sans Display';
