refactor: Forms components

--- a/frontend/src/components/ui/BtnHasProblem/BtnHasProblem.module.css
+++ b/frontend/src/components/ui/BtnHasProblem/BtnHasProblem.module.css
@@ -1,7 +1,7 @@
 .btn {
   width: 322px;
   height: 221px;
-  background: #F8F8F8;
+  background: #F3F0E9;
   border-radius: 24px;
 
   font-family: 'Yandex Sans Display';
