--- a/frontend/src/components/ui/ButtonMenu/ButtonMenu.module.css
+++ b/frontend/src/components/ui/ButtonMenu/ButtonMenu.module.css
@@ -90,3 +90,10 @@
 .invisibleCount {
   border-left: 4px solid #DEDEDE;
 }
+
+.disabled {
+  background: #FFF;
+  border: 4px solid #DEDEDE;
+  opacity: 0.5;
+  cursor: default;
+}
