--- a/frontend/src/components/ui/ErrorForm/ErrorForm.module.css
+++ b/frontend/src/components/ui/ErrorForm/ErrorForm.module.css
@@ -12,3 +12,13 @@
   color: #FF0000;
   text-align: center;
 }
+
+.loading {
+  font-family: 'Yandex Sans Display';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 50px;
+  color: #2AAD2E;
+  text-align: center;
+}
